Adding TravisCI config file
This is what the Travis continuous integration system uses to build and
run tests.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "mocha"
   },
   "author": "moses@tacocat.com",
-  "license": "MIT",
+  "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
