--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-language: node_js
-node_js:
-  - "6"
+language: php
+php:
+  - '5.6'
+before_install:
+  - wget https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh -O ~/.nvm/nvm.sh
+  - source ~/.nvm/nvm.sh
+  - nvm install 6 # install Node v6
+  - node --version
