--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
  # - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
  # - nvm install 6 # install Node v6
   - node --version
+
+install: "npm install"
+script: "npm test"
