--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: php
 php:
   - '5.6'
 before_install:
- # - wget https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh -O ~/.nvm/nvm.sh
- # - source ~/.nvm/nvm.sh
+  - wget https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh -O ~/.nvm/nvm.sh
+  - source ~/.nvm/nvm.sh
  # - export NVM_DIR="$HOME/.nvm"
  # - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
- # - nvm install 6 # install Node v6
+  - nvm install 6 # install Node v6
   - node --version
-
 install: "npm install"
 script: "npm test"
