--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ php:
   - '5.6'
 before_install:
   - wget https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh -O ~/.nvm/nvm.sh
-  - source ~/.nvm/nvm.sh
- # - export NVM_DIR="$HOME/.nvm"
- # - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+  - source . ~/.nvm/nvm.sh
+  - export NVM_DIR="$HOME/.nvm"
+  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
   - nvm install 6 # install Node v6
   - node --version
 install: "npm install"
