--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_install:
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
   - export NVM_DIR="$HOME/.nvm"
-  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+  - [ -s "$NVM_DIR/nvm.sh" ] \&& \. "$NVM_DIR/nvm.sh"  # This loads nvm
   - nvm install 6 # install Node v6
   - node --version
 install: "npm install"
