--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: php
 php:
   - '5.6'
 before_install:
-  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
+  - wget https://raw.githubusercontent.com/creationix/nvm/v0.33.1/nvm.sh -O ~/.nvm/nvm.sh
+  - source ~/.nvm/nvm.sh
   - export NVM_DIR="$HOME/.nvm"
   - [ -s "$NVM_DIR/nvm.sh" ] \&& \. "$NVM_DIR/nvm.sh"  # This loads nvm
   - nvm install 6 # install Node v6
