--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
   - mysql
 before_install:
   - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
-  - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O /tmp/zenphoto.tar.gz"
-  - "tar -xvf /tmp/zenphoto.tar.gz"
+  - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
+  - "tar -xvf ./zenphoto.tar.gz" ./zenphoto/
   - "wget https://raw.githubusercontent.com/creationix/nvm/v0.31.0/nvm.sh -O ~/.nvm/nvm.sh"
   - source ~/.nvm/nvm.sh
   - export NVM_DIR="$HOME/.nvm"
