--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ php:
   - '5.6'
 services:
   - mysql
+addons:
+  hosts:
+    - test.com
+    - subdomain.test.com
 before_install:
   - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
   - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
@@ -17,5 +21,7 @@ before_install:
   - echo $TRAVIS_BUILD_DIR
   - pwd
   - ls
+  - "content=$(wget sumdomain.test.com -q -O -)"
+  - echo $content
 install: "npm install"
 script: "npm test"
