--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - echo $TRAVIS_BUILD_DIR
   - pwd
   - ls
-  - "content=$(wget sumdomain.test.com -q -O -)"
+  - "content=$(wget subdomain.test.com -q -O -)"
   - echo $content
 install: "npm install"
 script: "npm test"
