--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - echo $TRAVIS_BUILD_DIR
   - pwd
   - ls
-  - "content=$(curl -L localhost)"
+  - "content=$(curl -L localhost:8000)"
   - echo $content
 install: "npm install"
 script: "npm test"
