--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
   - echo $TRAVIS_BUILD_DIR
   - pwd
   - ls
-  - "content=$(curl -L localhost:9000)"
+  - echo Port $PORT
+  - "content=$(curl -L localhost:8080)"
   - echo $content
 install: "npm install"
 script: "npm test"
