--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
   - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
   - mkdir zenphoto
-  - "tar -xvf ./zenphoto.tar.gz -C ./zenphoto/"
+  - "tar -xvf ./zenphoto.tar.gz -C  --strip-components=1 ./zenphoto/"
   - "wget https://raw.githubusercontent.com/creationix/nvm/v0.31.0/nvm.sh -O ~/.nvm/nvm.sh"
   - source ~/.nvm/nvm.sh
   - export NVM_DIR="$HOME/.nvm"
