--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - mkdir zenphoto
   - cd zenphoto
   - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
-  - "tar -xvf ./zenphoto.tar.gz -C  --strip=1 --show-transformed"
+  - "tar -xvf ./zenphoto.tar.gz -C  --strip-components=1 --show-transformed"
   - cd ..
   - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
   - "php -S localhost:8000 &"
