--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 before_install:
   - mkdir zenphoto
   - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
-  - "tar -xvf ./zenphoto.tar.gz -C  --strip-components=1 --show-transformed -C zenphoto"
+  - "tar -xvf ./zenphoto.tar.gz -C zenphoto --strip-components=1 --show-transformed "
   - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
   - "php -S localhost:8000 &"
   - sleep 3
