--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_install:
   - mkdir zenphoto
   - "wget https://github.com/zenphoto/zenphoto/archive/zenphoto-1.4.13.tar.gz  -O ./zenphoto.tar.gz"
   - "tar -xvf ./zenphoto.tar.gz -C zenphoto --strip-components=1 --show-transformed "
-  - "mysql -e 'CREATE DATABASE IF NOT EXISTS test;'"
-  - "php -S localhost:8000 &"
+  - cp zenphoto.cfg.php zenphoto/zp-data/
+  - "mysql -e 'CREATE DATABASE IF NOT EXISTS zenphoto; GRANT ALL PRIVILEGES ON zenphoto.* TO 'travis'@'localhost'; FLUSH PRIVILEGES;'"
+  - "php -S localhost:8000 &" # Start php's internal webserver
   - sleep 3
   - "content=$(curl -L localhost:8000/zenphoto/index.php)"
   - echo $content
